2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/WebTypeManager.cs: Use project to resolve target
	.NET version for assemblies.

	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Resolve types
	of items from register directives. Lazy-load descriptions.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Include
	controls referenced by Register directives when listing tags.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.addin.xml: Specify position for build step.

	* MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs: Enable designer class
	updating for UserControls and MasterPages.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/BaseHtmlEditorExtension.cs: Split out the HTML
	editor extension. Add document outlining.

	* Makefile.am:
	* AspNetAddIn.mdp: Updated.

	* MonoDevelop.AspNet.addin.xml:
	* MonoDevelop.Html/HtmlParser.cs: Added an HTML parser.

	* MonoDevelop.AspNet.Gui/HtmlEditorExtension.cs: Split out the HTML
	editor extension. Add document outlining. Mostly extracted from
	Moonlight addin.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AspNetAddIn.mdp:
	* MonoDevelop.AspNet.Gui/HtmlTextEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/BaseHtmlEditorExtension.cs: Renamed file.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/HtmlTextEditorExtension.cs: Move re-usable HTML
	editing into base class in preparation for other changes.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/HtmlTextEditorExtension.cs: Tidy up
	doctype->schema resolution code, and only try to resolve doctype when
	it changes. Use case-insensitive completion.
